# Pacman

computer_graphics_pacman/: CMakeLists.txt
computer_graphics_pacman/shaders/: shader.frag
computer_graphics_pacman/src/: ghost.cpp  ghost.h  main.cpp  model.cpp  model.h  pacman.cpp  pacman.h  power_pellet.cpp  power_pellet.h  scene.cpp  scene.h  utils.cpp  utils.h  vec3.h
